complete rework of the gradle build files.